<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:textStyle="bold"
            android:inputType="textCapCharacters" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/txt_nome"
            android:inputType="text" />

        <TextView
            android:id="@+id/sexoTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:text="@string/txt_sexo"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonFem"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/btn_feminino" />

            <RadioButton
                android:id="@+id/radioButtonMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_masculino" />
        </LinearLayout>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:text="@string/txt_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/txt_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/telefoneTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:text="@string/txt_telefone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/telefoneInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/txt_telefone"
            android:inputType="number" />

        <TextView
            android:id="@+id/preferTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:text="@string/txt_preferencias"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/musica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/cbox_Música" />

            <CheckBox
                android:id="@+id/cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/cbox_Cinema" />

            <CheckBox
                android:id="@+id/esporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/cbox_Esporte" />

            <CheckBox
                android:id="@+id/gastronomia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/cbox_Gastronomia" />
        </LinearLayout>

        <TextView
            android:id="@+id/NotifyTextView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#40E0D0"
            android:text="@string/ativar_notify"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/notifySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exibirButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_Exibir" />

            <Button
                android:id="@+id/limparButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_Limpar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


